# emberdb

./: .gitignore  Cargo.toml  README.md  Terminal  config.yaml  detection_config.toml  diastolic_rate.json  hr_trend.flux  index.html  systolic_rate.json  test_influxdb_timeseries.sh  test_pattern_detection.sh  test_timeseries.sh  view_data.py
.github/workflows/: rust.yml
data/chunks/: 1672574400.chunk
data/wal/: records.wal
src/: config.rs  error.rs  lib.rs  main.rs
src/api/: mod.rs  rest.rs
src/fhir/: conversion.rs  mod.rs  resources.rs
src/storage/: README.md  chunk.rs  mod.rs  persistence.rs
src/templates/: simple.html  test.html
src/timeseries/: detection.rs  functions.rs  mod.rs  query.rs
